add integration test for signin & signup